# Open-WebUI-SQLite-migration

./: .gitignore  CHANGELOG.md  LICENSE  README.md  SECURITY.md  catalog-info.yaml  migrate.py  mkdocs.yml  pyproject.toml  sbom.cdx.json
.github/workflows/: release.yml  techdocs.yml  tests.yaml
docs/: development.md  index.md
open_webui_sqlite_migration/: __init__.py  migrate.py
tests/: test_copy_sqlite_db.py  test_dry_run.py  test_env.py  test_env_exceptions.py  test_helpers.py  test_migrate_table_copy.py  test_parse_args.py  test_pg_column_types.py  test_row_counts.py  test_sqlite.py  test_validate_postgres.py  test_validate_sqlite.py
