[project]
name = "open-webui-sqlite-migration"
version = "0.1.3"
description = "Migrate Open WebUI from SQLite to PostgreSQL"
keywords = ["open-webui", "sqlite", "postgres"]
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Mikke Schirén", email = "mikke.schiren@digitalist.com" }
]
requires-python = ">=3.11"

dependencies = [
    "psycopg2-binary>=2.9.11",
    "rich>=13.9.4"
]

[project.scripts]
open-webui-migrate-sqlite = "open_webui_sqlite_migration.migrate:main"


[project.urls]
Homepage = "https://digitalist.cloud"
Repository = "https://github.com/Digitalist-Open-Cloud/Open-WebUI-SQLite-migration.git"
Issues = "https://github.com/Digitalist-Open-Cloud/Open-WebUI-SQLite-migration/issues"
Changelog = "https://github.com/me/spam/blob/main/CHANGELOG.md"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = true

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
pytest-mock = "^3.12"
pytest-cov = "^5.0"

[tool.coverage.run]
branch = true
source = ["open_webui_sqlite_migration"]

[tool.coverage.report]
show_missing = true
skip_covered = true
fail_under = 95
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "def main",
]

[tool.pylint.'MESSAGES CONTROL']
disable = [
    "import-error",
]

[tool.pylint.imports]
ignored-modules = ["psycopg2"]